# sbipf-reporter

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs_src/: conf.py  csv_format.rst  development.rst  index.rst  installation.rst  modules.rst  python_api.rst  sbipf_reporter.rst  usage.rst
scripts/: bump_version.py
src/sbipf_reporter/: __init__.py  __main__.py  cli.py  formatter.py  parser.py  reporter.py
tests/: test_parser.py  test_reporter.py  test_sbipf_reporter.py
tests/fixtures/: sbi_10col.csv  sbi_enclosed_headers.csv  sbi_sample.csv  sbi_square_brackets.csv
